<resources>
    <string name="app_name">MovieAndroidApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!--    nav list-->
    <string name="nav_home_user">HOME</string>
    <string name="nav_category_user">CATALOG</string>
    <string name="nav_profile_user">PROFILE</string>

    <string name="navigation_drawer_opend">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="track_selection_title">Video Quality</string>

    <string-array name="list_genre">
        <item>Action</item>
        <item>Comedy</item>
        <item>Honor</item>
    </string-array>

    <string name="USER">user</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="users">USERS</string>
    <string name="reviews">REVIEWS</string>
    <string name="pricing">PRICING</string>
    <string name="admin">ADMIN</string>

    <!-- Dropdown-->
    <string name="select">Choose quality</string>


</resources>