<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home_user"
            android:title="@string/nav_home_user"
            android:icon="@drawable/ic_home"
            />
        <item android:id="@+id/nav_category_user"
            android:title="@string/nav_category_user"
            android:icon="@drawable/ic_category"
            />
        <item android:id="@+id/nav_profile_user"
            android:title="@string/nav_profile_user"
            android:icon="@drawable/ic_person"
            />
        <item android:id="@+id/nav_pricing_user"
            android:title="@string/pricing"
            android:icon="@drawable/ic_registration"
            />
        <item android:id="@+id/nav_admin"
            android:title="@string/admin"
            android:icon="@drawable/ic_admin"
            />
    </group>

</menu>