<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_dashboard_admin"
            android:title="@string/dashboard"
            android:icon="@drawable/ic_dashboard"
            />
        <item android:id="@+id/nav_catalog_admin"
            android:title="@string/nav_category_user"
            android:icon="@drawable/ic_movies"
            />
        <item android:id="@+id/nav_user_admin"
            android:title="@string/users"
            android:icon="@drawable/ic_person"
            />
        <item android:id="@+id/nav_review_admin"
            android:title="@string/reviews"
            android:icon="@drawable/ic_star"
            />
        <item android:id="@+id/nav_add_admin"
            android:title="ADD MOVIE"
            android:icon="@drawable/ic_add"
            />
        <item android:id="@+id/nav_home"
            android:title="HOME"
            android:icon="@drawable/ic_home"
            />
    </group>

</menu>